# crewai_hello_world_mcp

./: README.md  pyproject.toml
src/aip_benchmark/: crew.py  main.py
src/aip_benchmark/config/: agents.yaml  tasks.yaml
