[project]
name = "aip_benchmark"
version = "0.1.0"
description = "aip-benchmark using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.140.0,<1.0.0",
    "crewai-tools[mcp] (>=0.49.0,<0.50.0)"
]

[project.scripts]
aip_benchmark = "aip_benchmark.main:run"
run_crew = "aip_benchmark.main:run"
train = "aip_benchmark.main:train"
replay = "aip_benchmark.main:replay"
test = "aip_benchmark.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
